# infant-cry-audio-classification

./: .gitignore  20audioeach.py  =  LICENSE  README.md  audio_approach.ipynb  augmented_audio_approach.ipynb  classifying-infant-cry-type.ipynb  melwidenoise_classifying-infant-cry-type.ipynb  noise_add_classifying-infant-copy.ipynb  pyproject.toml
